@@ -1,3 +1,8 @@
+2005-04-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: More fixes to the system tray icon stuff. Tested on
+	linux and windows now.
+
 2005-04-25  Reinhard Max  <max@suse.de>
 
 	* tkchat.tcl: Fixed the latest additions to not break execution on
